--- a/styles/pages/services/Rental/Home/Home.module.scss
+++ b/styles/pages/services/Rental/Home/Home.module.scss
@@ -1,11 +1,102 @@
-
 .intro_text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-size: 30px;
     text-align: center;
     margin-top: 20px;
     font-weight: 700;
     user-select: none;
+}
+
+.status {
+    margin-top: 20px;
+    width: 160px;
+    background-color: white;
+    height: 160px;
+    border-radius: 30px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 1px solid rgb(20, 0, 201);
+    box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
+    background: linear-gradient(to bottom right, #221ff0, #0a0881);
+}
+
+.status_flex {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.status_title {
+    font-family: "pretendard";
+    font-weight: 700;
+    font-size: 25px;
+    text-align: center;
+    // margin-left: 20px;
+    // margin-top: 20px;
+    user-select: none;
+    color: white;
+    margin-top: -10px; // -20px 가 원래 수치임.
+}
+
+.status_number {
+    font-family: "pretendard";
+    font-weight: 700;
+    font-size: 50px;
+    text-align: center;
+    // margin-top: 10px;
+    user-select: none;
+    color: white;
+    // line-height: 110px;
+}
+
+.status_message {
+    position: absolute;
+    bottom: 10px;
+    background-color: white;
+    border-radius: 50px;
+    width: auto;
+    height: 20px;
+    padding: auto 10px;
+}
+
+.status_now_circle {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: rgb(0, 196, 59);
+    border-radius: 100%;
+    margin-top: 5px;
+    margin-left: 10px;
+    box-shadow: 0 0px 10px 0 rgb(0, 182, 0);
+}
+
+.status_now_message {
+    float: left;
+    font-family: 'pretendard';
+    font-weight: 300;
+    font-size: 13px;
+    text-align: left;
+    margin-left: 5px;
+    margin-right: 10px;
+    margin-top: 2.5px;
+    user-select: none;
+}
+
+.notice {
+    padding: 20px;
+    font-family: 'pretendard';
+    font-weight: 600;
+    margin: auto;
+    width: 230px;
+    margin-top: 20px;
+    background-color: white;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
 }
 
 #intro_highlight {
