--- a/styles/components/Container/Container.module.css
+++ b/styles/components/Container/Container.module.css
@@ -7,5 +7,4 @@
   .container {
     width: 100%;
   }
-}
-/*# sourceMappingURL=Container.module.css.map */
+}/*# sourceMappingURL=Container.module.css.map */
