--- a/styles/components/join/Inputs/Inputs.module.css
+++ b/styles/components/join/Inputs/Inputs.module.css
@@ -3,8 +3,7 @@
 }
 
 .helper {
-  font-family: 'pretendard';
+  font-family: "pretendard";
   color: black;
   font-weight: 500;
-}
-/*# sourceMappingURL=Inputs.module.css.map */
+}/*# sourceMappingURL=Inputs.module.css.map */
