--- a/styles/pages/auth/join/Join/Join.module.css
+++ b/styles/pages/auth/join/Join/Join.module.css
@@ -6,7 +6,6 @@
   height: auto;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
@@ -15,7 +14,7 @@
 }
 
 .title {
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-weight: 800;
   font-size: 22px;
 }
@@ -25,7 +24,7 @@
 }
 
 .description {
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-weight: 300;
   font-size: 15px;
   margin-top: 10px;
@@ -34,8 +33,7 @@
 
 #highlight_purple {
   position: absolute;
-  background: -webkit-gradient(linear, left top, right top, from(#7a7a7a), to(#574ec9));
-  background: linear-gradient(to right, #7a7a7a, #574ec9);
+  background: linear-gradient(to right, rgb(122, 122, 122), rgb(87, 78, 201));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -44,5 +42,4 @@
   .box {
     width: 100%;
   }
-}
-/*# sourceMappingURL=Join.module.css.map */
+}/*# sourceMappingURL=Join.module.css.map */
