--- a/styles/components/Input/Input.module.css
+++ b/styles/components/Input/Input.module.css
@@ -1,18 +1,14 @@
 .input {
   border-radius: 10px;
   border: 1px solid #b9b9b9;
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-size: 18px;
   padding: 15px 15px;
   margin-top: 10px;
-  -webkit-transition: border .3s;
-  transition: border .3s;
+  transition: border 0.3s;
 }
-
 .input:focus {
   outline: none;
   border: 1px solid black;
-  -webkit-transition: border .3s;
-  transition: border .3s;
-}
-/*# sourceMappingURL=Input.module.css.map */
+  transition: border 0.3s;
+}/*# sourceMappingURL=Input.module.css.map */
