--- a/styles/components/ServiceHeader/ServiceHeader.module.css
+++ b/styles/components/ServiceHeader/ServiceHeader.module.css
@@ -5,19 +5,10 @@
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
   z-index: 5;
 }
 
@@ -27,19 +18,18 @@
 
 .title {
   float: left;
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-size: 20px;
   font-weight: 700;
   line-height: 70px;
   margin-left: 30px;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
 .highlight {
-  background-color: #070064;
+  background-color: rgb(7, 0, 100);
   color: white;
   padding: 3px 7px;
   margin-right: 3px;
@@ -51,23 +41,14 @@
   float: left;
   margin-left: 30px;
   height: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: left;
-      -ms-flex-align: left;
-          align-items: left;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  align-items: left;
+  justify-content: left;
+  flex-direction: row;
 }
 
 .menu_item {
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-weight: 400;
   font-size: 16px;
   padding-left: 20px;
@@ -75,23 +56,19 @@
   line-height: 70px;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   cursor: pointer;
 }
-
 .menu_item:hover {
   text-decoration: underline;
   text-underline-offset: 10px;
-  -webkit-text-decoration-color: #aaaaaa;
-          text-decoration-color: #aaaaaa;
+  text-decoration-color: rgb(170, 170, 170);
 }
 
 #menu_active {
   text-decoration: underline;
   text-underline-offset: 10px;
-  -webkit-text-decoration-color: black;
-          text-decoration-color: black;
+  text-decoration-color: black;
 }
 
 .drawer_button {
@@ -110,8 +87,7 @@
     margin: auto;
     position: relative;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
     width: calc(100% - 50px);
   }
   .drawer_button {
@@ -128,5 +104,4 @@
   .drawer {
     position: relative;
   }
-}
-/*# sourceMappingURL=ServiceHeader.module.css.map */
+}/*# sourceMappingURL=ServiceHeader.module.css.map */
