--- a/styles/pages/services/Rental/Home/Home.module.css
+++ b/styles/pages/services/Rental/Home/Home.module.css
@@ -6,7 +6,6 @@
   font-weight: 700;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
@@ -18,30 +17,18 @@
   border-radius: 30px;
   position: relative;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  border: 1px solid #1400c9;
-  -webkit-box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
-          box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
-  background: -webkit-gradient(linear, left top, right bottom, from(#221ff0), to(#0a0881));
+  transform: translateX(-50%);
+  border: 1px solid rgb(20, 0, 201);
+  box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
   background: linear-gradient(to bottom right, #221ff0, #0a0881);
 }
 
 .status_flex {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .status_title {
@@ -51,7 +38,6 @@
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   color: white;
   margin-top: -10px;
@@ -64,7 +50,6 @@
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   color: white;
 }
@@ -83,17 +68,16 @@
   float: left;
   width: 10px;
   height: 10px;
-  background-color: #00c43b;
+  background-color: rgb(0, 196, 59);
   border-radius: 100%;
   margin-top: 5px;
   margin-left: 10px;
-  -webkit-box-shadow: 0 0px 10px 0 #00b600;
-          box-shadow: 0 0px 10px 0 #00b600;
+  box-shadow: 0 0px 10px 0 rgb(0, 182, 0);
 }
 
 .status_now_message {
   float: left;
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-weight: 500;
   font-size: 10px;
   text-align: left;
@@ -102,13 +86,12 @@
   margin-top: 2.5px;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
 .notice {
   padding: 20px;
-  font-family: 'pretendard';
+  font-family: "pretendard";
   font-weight: 600;
   margin: auto;
   width: 230px;
@@ -116,36 +99,63 @@
   background-color: white;
   text-align: center;
   border-radius: 30px;
-  -webkit-box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 50px;
 }
 
 .warning {
   position: relative;
-  color: #5a5a5a;
-  font-family: 'pretendard';
+  color: rgb(90, 90, 90);
+  font-family: "pretendard";
   font-weight: 500;
   text-align: left;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: 10px;
   font-size: 12px;
+}
+
+.button {
+  background: linear-gradient(to right, rgb(38, 172, 90), #11998e);
+  width: 200px;
+  height: 60px;
+  border-radius: 15px;
+  margin: auto;
+  margin-top: 10px;
+  cursor: pointer;
+  box-shadow: 0 5px 50px 2px rgba(38, 172, 90, 0.45);
+  border: 1px solid rgb(27, 123, 64);
+}
+
+.button_text {
+  font-family: "pretendard";
+  font-weight: 600;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  line-height: 60px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
+.sheet_title {
+  font-family: "pretendard";
+  font-weight: 700;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.emoji_font {
+  width: 25px;
 }
 
 #warning_strong {
@@ -155,8 +165,7 @@
 }
 
 #intro_highlight {
-  background: -webkit-gradient(linear, left top, right top, from(#070064), to(#5347ea));
-  background: linear-gradient(to right, #070064, #5347ea);
+  background: linear-gradient(to right, rgb(7, 0, 100), rgb(83, 71, 234));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -165,5 +174,7 @@
   .intro_text {
     font-size: 22px;
   }
-}
-/*# sourceMappingURL=Home.module.css.map */
+  .bottom_sheet {
+    margin-bottom: 55px;
+  }
+}/*# sourceMappingURL=Home.module.css.map */
