--- a/styles/pages/services/Rental/Home/Home.module.scss
+++ b/styles/pages/services/Rental/Home/Home.module.scss
@@ -109,9 +109,49 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     margin-top: 10px;
     font-size: 12px;
+}
+
+.button {
+    background: linear-gradient(to right, rgb(38, 172, 90), #11998e);
+    width: 200px;
+    height: 60px;
+    border-radius: 15px;
+    margin: auto;
+    margin-top: 10px;
+    cursor: pointer;
+    box-shadow: 0 5px 50px 2px rgba(38, 172, 90, 0.45);
+    border: 1px solid rgb(27, 123, 64);
+}
+
+.button_text {
+    font-family: 'pretendard';
+    font-weight: 600;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    line-height: 60px;
+    user-select: none;
+}
+
+.bottom_sheet {
+
+}
+
+.sheet_title {
+    font-family: 'pretendard';
+    font-weight: 700;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.emoji_font {
+    width: 25px;
 }
 
 #warning_strong {
@@ -129,5 +169,8 @@
 @media (max-width: 768px) {
     .intro_text {
         font-size: 22px;
+    }
+    .bottom_sheet {
+        margin-bottom: 55px;
     }
 }
