--- a/styles/components/Footer/Footer.module.css
+++ b/styles/components/Footer/Footer.module.css
@@ -2,19 +2,23 @@
   width: 100%;
   height: 120px;
   position: absolute;
-  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .space {
-  margin-top: 140px;
+  margin-top: calc(20px + 120px);
 }
 
 .text {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 300;
   font-size: 15px;
   text-align: center;
   color: black;
   line-height: 20px;
-}/*# sourceMappingURL=Footer.module.css.map */
+}
+/*# sourceMappingURL=Footer.module.css.map */
