--- a/styles/components/Input/Input.module.css
+++ b/styles/components/Input/Input.module.css
@@ -1,14 +1,18 @@
 .input {
   border-radius: 10px;
   border: 1px solid #b9b9b9;
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-size: 18px;
   padding: 15px 15px;
   margin-top: 10px;
-  transition: border 0.3s;
+  -webkit-transition: border .3s;
+  transition: border .3s;
 }
+
 .input:focus {
   outline: none;
   border: 1px solid black;
-  transition: border 0.3s;
-}/*# sourceMappingURL=Input.module.css.map */
+  -webkit-transition: border .3s;
+  transition: border .3s;
+}
+/*# sourceMappingURL=Input.module.css.map */
