--- a/styles/components/join/Terms/Terms.module.css
+++ b/styles/components/join/Terms/Terms.module.css
@@ -3,15 +3,17 @@
 }
 
 .fadein {
-  animation: fadein 0.7s;
+  -webkit-animation: fadein .7s;
+          animation: fadein .7s;
 }
 
 .fadeout {
-  animation: fadeout 0.7s;
+  -webkit-animation: fadeout .7s;
+          animation: fadeout .7s;
 }
 
 .label {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 500;
   font-size: 15px;
 }
@@ -31,4 +33,5 @@
 .require {
   font-weight: 300;
   color: red;
-}/*# sourceMappingURL=Terms.module.css.map */
+}
+/*# sourceMappingURL=Terms.module.css.map */
