--- a/styles/pages/auth/join/not/Info.module.css
+++ b/styles/pages/auth/join/not/Info.module.css
@@ -2,11 +2,12 @@
   position: absolute;
   width: 500px;
   height: calc(100% - 70px);
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   -webkit-tap-highlight-color: transparent;
   padding: 30px;
   border: 1px solid #d2d2d2;
@@ -14,13 +15,14 @@
   crollbar-width: none;
   -ms-overflow-style: none;
 }
+
 .box::-webkit-scrollbar {
   display: none;
 }
 
 .title {
   text-align: left;
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-size: 20px;
   font-weight: 700;
 }
@@ -29,7 +31,7 @@
   text-align: left;
   margin-top: 5px;
   font-size: 13px;
-  color: rgb(130, 130, 130);
+  color: #828282;
 }
 
 .space {
@@ -37,19 +39,20 @@
 }
 
 .terms_title {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-size: 20px;
   font-weight: 700;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
 }
 
 #terms_highlight {
+  background: -webkit-gradient(linear, left top, right top, from(#fe8c00), to(#f83600));
   background: linear-gradient(to right, #fe8c00, #f83600);
   color: transparent;
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
 }
 
 #terms_light {
@@ -79,7 +82,7 @@
 }
 
 .label {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 500;
   font-size: 15px;
 }
@@ -102,4 +105,5 @@
   .space {
     height: 15px;
   }
-}/*# sourceMappingURL=Info.module.css.map */
+}
+/*# sourceMappingURL=Info.module.css.map */
