--- a/styles/pages/services/Rental/Home/Home.module.css
+++ b/styles/pages/services/Rental/Home/Home.module.css
@@ -6,6 +6,7 @@
   font-weight: 700;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
 }
 
@@ -17,18 +18,30 @@
   border-radius: 30px;
   position: relative;
   left: 50%;
-  transform: translateX(-50%);
-  border: 1px solid rgb(20, 0, 201);
-  box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border: 1px solid #1400c9;
+  -webkit-box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
+          box-shadow: 0px 7px 30px 2px rgba(172, 166, 255, 0.35);
+  background: -webkit-gradient(linear, left top, right bottom, from(#221ff0), to(#0a0881));
   background: linear-gradient(to bottom right, #221ff0, #0a0881);
 }
 
 .status_flex {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .status_title {
@@ -38,6 +51,7 @@
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
   color: white;
   margin-top: -10px;
@@ -50,6 +64,7 @@
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
   color: white;
 }
@@ -68,11 +83,12 @@
   float: left;
   width: 10px;
   height: 10px;
-  background-color: rgb(0, 196, 59);
+  background-color: #00c43b;
   border-radius: 100%;
   margin-top: 5px;
   margin-left: 10px;
-  box-shadow: 0 0px 10px 0 rgb(0, 182, 0);
+  -webkit-box-shadow: 0 0px 10px 0 #00b600;
+          box-shadow: 0 0px 10px 0 #00b600;
 }
 
 .status_now_message {
@@ -86,6 +102,7 @@
   margin-top: 2.5px;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
 }
 
@@ -99,37 +116,50 @@
   background-color: white;
   text-align: center;
   border-radius: 30px;
-  box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 30px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 50px;
 }
 
 .warning {
   position: relative;
-  color: rgb(90, 90, 90);
+  color: #5a5a5a;
   font-family: "pretendard";
   font-weight: 500;
   text-align: left;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 10px;
   font-size: 12px;
 }
 
 .button {
-  background: linear-gradient(to right, rgb(38, 172, 90), #11998e);
+  background: -webkit-gradient(linear, left top, right top, from(#26ac5a), to(#11998e));
+  background: linear-gradient(to right, #26ac5a, #11998e);
   width: 200px;
   height: 60px;
   border-radius: 15px;
   margin: auto;
   margin-top: 10px;
   cursor: pointer;
-  box-shadow: 0 5px 50px 2px rgba(38, 172, 90, 0.45);
-  border: 1px solid rgb(27, 123, 64);
+  -webkit-box-shadow: 0 5px 50px 2px rgba(38, 172, 90, 0.45);
+          box-shadow: 0 5px 50px 2px rgba(38, 172, 90, 0.45);
+  border: 1px solid #1b7b40;
 }
 
 .button_text {
@@ -141,6 +171,7 @@
   line-height: 60px;
   -webkit-user-select: none;
      -moz-user-select: none;
+      -ms-user-select: none;
           user-select: none;
 }
 
@@ -150,12 +181,46 @@
   font-size: 25px;
   text-align: center;
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .emoji_font {
   width: 25px;
+}
+
+.sheet_button {
+  width: calc(100% - 40px);
+  height: 50px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  background: -webkit-gradient(linear, left top, right top, from(#159987), to(#155799));
+  background: linear-gradient(to right, #159987, #155799);
+  border-radius: 10px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.sheet_button:active {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.sheet_button_text {
+  font-family: 'pretendard';
+  font-size: 15px;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 #warning_strong {
@@ -165,7 +230,8 @@
 }
 
 #intro_highlight {
-  background: linear-gradient(to right, rgb(7, 0, 100), rgb(83, 71, 234));
+  background: -webkit-gradient(linear, left top, right top, from(#070064), to(#5347ea));
+  background: linear-gradient(to right, #070064, #5347ea);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -177,4 +243,5 @@
   .bottom_sheet {
     margin-bottom: 55px;
   }
-}/*# sourceMappingURL=Home.module.css.map */
+}
+/*# sourceMappingURL=Home.module.css.map */
