--- a/styles/pages/services/Rental/Home/Home.module.scss
+++ b/styles/pages/services/Rental/Home/Home.module.scss
@@ -75,7 +75,7 @@
 
 .status_now_message {
     float: left;
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 500;
     font-size: 10px;
     text-align: left;
@@ -87,7 +87,7 @@
 
 .notice {
     padding: 20px;
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 600;
     margin: auto;
     width: 230px;
@@ -102,7 +102,7 @@
 .warning {
     position: relative;
     color: rgb(90, 90, 90);
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 500;
     text-align: left;
     user-select: none;
@@ -127,7 +127,7 @@
 }
 
 .button_text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 600;
     color: white;
     font-size: 20px;
@@ -137,11 +137,10 @@
 }
 
 .bottom_sheet {
-
 }
 
 .sheet_title {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 700;
     font-size: 25px;
     text-align: center;
@@ -152,6 +151,35 @@
 
 .emoji_font {
     width: 25px;
+}
+
+.sheet_button {
+    width: calc(100% - 40px);
+    height: 50px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    background: linear-gradient(
+        to right,
+        #159987,
+        #155799
+    );
+    border-radius: 10px;
+    transition: all .2s;
+    &:active {
+        filter: brightness(85%);
+        transition: all .2s;
+    }
+}
+
+.sheet_button_text {
+    font-family: 'pretendard';
+    font-size: 15px;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 #warning_strong {
