--- a/styles/components/Footer/Footer.module.scss
+++ b/styles/components/Footer/Footer.module.scss
@@ -18,3 +18,13 @@
     color: black;
     line-height: 20px;
 }
+
+.github {
+    margin: 10px auto;
+    font-weight: 400;
+
+    & a {
+        color: #0042ff;
+        font-weight: 500;
+    }
+}
