--- a/styles/pages/auth/Login/Login.module.scss
+++ b/styles/pages/auth/Login/Login.module.scss
@@ -1,8 +1,8 @@
 .box {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: calc(100vh - 70px);
+    //align-items: center;
+    //height: calc(100vh - 70px);
 }
 
 .login {
