우산 대여 화면 수정

--- a/styles/components/Footer/Footer.module.css
+++ b/styles/components/Footer/Footer.module.css
@@ -26,6 +26,4 @@
 .github a {
   color: #0042ff;
   font-weight: 500;
-}
-
-/*# sourceMappingURL=Footer.module.css.map */
+}/*# sourceMappingURL=Footer.module.css.map */
