--- a/styles/pages/auth/Login/Login.module.css
+++ b/styles/pages/auth/Login/Login.module.css
@@ -37,6 +37,4 @@
   .space {
     height: 15px;
   }
-}
-
-/*# sourceMappingURL=Login.module.css.map */
+}/*# sourceMappingURL=Login.module.css.map */
