--- a/styles/components/Loading/Loading.module.css
+++ b/styles/components/Loading/Loading.module.css
@@ -6,7 +6,8 @@
   align-items: center;
   height: 100vh;
   background: rgba(150, 150, 150, 0.3);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
   width: 100vw;
   margin-top: -70px;
   transition: background-color 0.3s;
@@ -25,7 +26,9 @@
 }
 
 .text {
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   font-family: "pretendard";
   font-weight: 500;
   font-size: 15px;
@@ -46,7 +49,9 @@
 }
 
 .mini_text {
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   color: rgb(130, 130, 130);
   font-family: "pretendard";
   font-weight: 300;
@@ -71,6 +76,4 @@
   to {
     opacity: 0;
   }
-}
-
-/*# sourceMappingURL=Loading.module.css.map */
+}/*# sourceMappingURL=Loading.module.css.map */
