--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -7,7 +7,9 @@
   margin: auto;
   overflow: hidden;
   border-radius: 30px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .video {
@@ -37,7 +39,8 @@
   max-width: 685px;
   height: 500px;
   background-color: rgba(50, 50, 50, 0.7);
-  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+          backdrop-filter: blur(9px);
   border-radius: 30px;
   z-index: 2;
 }
@@ -114,7 +117,9 @@
   font-size: 23px;
   text-align: center;
   margin-top: 15px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .intro_small_text {
@@ -122,7 +127,9 @@
   font-size: 15px;
   text-align: center;
   margin-top: 10px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .warp_text_box {
@@ -133,7 +140,9 @@
   justify-content: left;
   align-items: left;
   height: 100%;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   cursor: pointer;
 }
 
@@ -171,7 +180,6 @@
 #umbrella {
   color: white;
   background: #667db6;
-  background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
   background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
   box-shadow: 0px 7px 15px 2px rgba(102, 125, 182, 0.7);
 }
@@ -179,7 +187,6 @@
 #club {
   color: white;
   background: #8e2de2;
-  background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
   background: linear-gradient(to right, #4a00e0, #8e2de2);
   border: 1px solid rgb(210, 200, 255);
   box-shadow: 0px 7px 15px 2px rgba(140, 45, 225, 0.7);
@@ -188,7 +195,6 @@
 #community {
   color: black;
   background: #0cebeb;
-  background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
   background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
   border: 1px solid rgb(25, 156, 123);
   box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
@@ -197,10 +203,7 @@
 #music {
   color: black;
   background: #11998e;
-  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);
   background: linear-gradient(to right, #38ef7d, #11998e);
   border: 1px solid #26a356;
   box-shadow: 0px 7px 15px 2px rgba(34, 211, 102, 0.7);
-}
-
-/*# sourceMappingURL=Main.module.css.map */
+}/*# sourceMappingURL=Main.module.css.map */
